--- a/MyFirstProject/index.html
+++ b/MyFirstProject/index.html
@@ -4,7 +4,7 @@
     <title> Haneen Hamoudi </title>
 </head>
 <body>
-    <h2>Welcome to my personal Plog</h2>
+    <h2>Welcome to my personal blog</h2>
         It's Haneen Hamoudi ,from Syria ,I am a computer engineer graduated last year.This is my first html project and I am so excited about it.<br>
         Currently I work as a homeschool teacher ,I am filled with desire and passion to create my own business and start a new life.<br>
         Well, I am a beginner programmer compared to the things I can do professionally.So,I want to share you some of my interests,qualities and dreams.
